--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
             margin: 0.5rem 0;
         }
 
+        #handwritten {
+            font-family: 'Patrick Hand', cursive;
+            white-space: nowrap;
+            overflow: hidden;
+            border-right: .15em solid #222;
+            width: 0;
+            font-size: 1.2em;
+            white-space: normal;
+            /* Permite que el texto haga wrap */
+            word-wrap: break-word;
+            /* Rompe palabras largas si es necesario */
+            overflow-wrap: anywhere;
+            /* Rompe texto para evitar overflow */
+        }
+
         .buttons a {
             text-decoration: none;
             padding: 0.75rem 1.5rem;
@@ -101,6 +116,32 @@
         .experience ul li a {
             color: grey;
         }
+
+        #contact-info {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            text-align: center;
+            font-size: 0.85rem;
+            color: #666;
+            background-color: rgba(255, 255, 255, 0.9);
+            /* fondo blanco semitransparente */
+            padding: 0.5rem 0;
+            border-top: 1px solid #ddd;
+            z-index: 999;
+        }
+
+        #contact-info a {
+            color: #666;
+            text-decoration: none;
+            margin: 0 0.5rem;
+            transition: color 0.3s;
+        }
+
+        #contact-info a:hover {
+            color: #000;
+        }
     </style>
 </head>
 
@@ -109,13 +150,20 @@
     <header>
         <h1 data-aos="fade-up" data-aos-duration="1000">Maira Díaz</h1>
         <h2 data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">Software Engineer | Team Leader</h2>
-        <p id="handwritten" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000"
-            style="font-family: 'Patrick Hand', cursive; white-space: nowrap; overflow: hidden; border-right: .15em solid #222; width: 0; font-size: 1.2em">
+        <p id="contact-info" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
+            mairadiaz73@gmail.com |
+            <a href="https://github.com/diazmaira" target="_blank">GitHub</a> |
+            <a href="https://medium.com/@mairamarraffini" target="_blank">Medium</a> |
+            <a href="https://www.linkedin.com/in/mairadiazmarraffini" target="_blank">LinkedIn</a>
+        </p>
+        <p id="handwritten" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
             🇦🇷⚽ Like Maradona, I orchestrate the game; like Messi, I finish with precision; and like Fillol, I catch
             every challenge. ⚽🇦🇷
         </p>
         <div class="buttons" data-aos="fade-up" data-aos-delay="600">
-            <a href="#">Download CV</a>
+            <a href="CV-Maira-Diaz-Software-Engineer.pdf" download="CV Maira Diaz - Software Engineer.pdf">
+
+                Download CV</a>
             <a href="#">Contact</a>
         </div>
     </header>
