--- a/index.html
+++ b/index.html
@@ -150,22 +150,16 @@
     <header>
         <h1 data-aos="fade-up" data-aos-duration="1000">Maira Díaz</h1>
         <h2 data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">Software Engineer | Team Leader</h2>
-        <p id="contact-info" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
-            mairadiaz73@gmail.com |
-            <a href="https://github.com/diazmaira" target="_blank">GitHub</a> |
-            <a href="https://medium.com/@mairamarraffini" target="_blank">Medium</a> |
-            <a href="https://www.linkedin.com/in/mairadiazmarraffini" target="_blank">LinkedIn</a>
-        </p>
         <p id="handwritten" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
             🇦🇷⚽ Like Maradona, I orchestrate the game; like Messi, I finish with precision; and like Fillol, I catch
             every challenge. ⚽🇦🇷
         </p>
-        <div class="buttons" data-aos="fade-up" data-aos-delay="600">
+        <div id="download-cv" class="buttons" data-aos="fade-up" data-aos-delay="600">
             <a href="CV-Maira-Diaz-Software-Engineer.pdf" download="CV Maira Diaz - Software Engineer.pdf">
 
                 Download CV</a>
-            <a href="#">Contact</a>
         </div>
+
     </header>
 
     <section data-aos="fade-up">
@@ -458,6 +452,14 @@
         </div>
     </section>
 
+    <footer>
+        <p id="contact-info" data-aos="fade-up">
+            mairadiaz73@gmail.com |
+            <a href="https://github.com/diazmaira" target="_blank">GitHub</a> |
+            <a href="https://medium.com/@mairamarraffini" target="_blank">Medium</a> |
+            <a href="https://www.linkedin.com/in/mairadiazmarraffini" target="_blank">LinkedIn</a>
+        </p>
+    </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
