--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
             <h2><span class="year">2022</span> Project Lead | University App (Mexico)</h2>
             <ul>
-                <li>Led cross-functional team of 9 (UX/UI, FE, BE, analyst, DevOps).</li>
+                <li>Led cross-functional team of 9 (UX/UI, FE, BE, analyst, DevOps) based in Argentina.</li>
                 <li>Defined roadmap and translated goals into tasks.</li>
                 <li>Led Scrum ceremonies and ensured sprint objectives.</li>
                 <li>Worked directly with the client and CEO.</li>
@@ -302,7 +302,8 @@
             <h2><span class="year">2022</span> Team Lead & Backend Tech Lead | Neocomplexx</h2>
             <ul>
                 <li><strong>Project</strong>: Student well-being app for the University of Monterrey, Mexico</li>
-                <li>Led a team of 9, defined roadmap, coordinated with client and CEO, and facilitated Scrum ceremonies.
+                <li>Led a team of 9 (UX/UI, FE, BE, analyst, DevOps), defined roadmap, coordinated with client and CEO,
+                    and facilitated Scrum ceremonies.
                 </li>
                 <li>Oversaw full delivery cycle: requirements → design in Figma → implementation → testing → demos.</li>
                 <li><strong>Key Technologies</strong>: Node.js with Express, Clean Architecture, MongoDB, AWS Lambda,
@@ -326,7 +327,7 @@
             <ul>
                 <li>Refactored microservices following clean architecture for scalability.</li>
                 <li>Mentored junior developers and managed onboarding.</li>
-                <li>Implemented fraud-prevention features with extensive testing.</li>
+                <li>Implemented fraud-prevention features.</li>
                 <li><strong>Key Technologies</strong>: Node.js, MongoDB, Clean Architecture, REST APIs, Git, Docker</li>
             </ul>
 
