--- a/index.html
+++ b/index.html
@@ -154,11 +154,9 @@
             🇦🇷⚽ Like Maradona, I orchestrate the game; like Messi, I finish with precision; and like Fillol, I catch
             every challenge. ⚽🇦🇷
         </p>
-        <div id="download-cv" class="buttons" data-aos="fade-up" data-aos-delay="600">
-            <a href="CV-Maira-Diaz-Software-Engineer.pdf" download="CV Maira Diaz - Software Engineer.pdf">
-
-                Download CV</a>
-        </div>
+        <!--<div id="download-cv" class="buttons" data-aos="fade-up" data-aos-delay="600">
+            <a href="CV-Maira-Diaz-Software-Engineer.pdf" download="CV Maira Diaz - Software Engineer.pdf"> Download CV</a>
+        </div>-->
 
     </header>
 
