--- a/index.html
+++ b/index.html
@@ -187,28 +187,28 @@
         <h3>💼 Leadership Experience</h3>
         <div class="experience">
 
-            <h2><span class="year">2024</span> Backend Technical Lead | Handshake App (U.S.A.)</h2>
+            <h2><span class="year">2024</span> Backend Technical Lead | Real State Mobile App for Startup (U.S.A.) </h2>
             <ul>
-                <li>Led backend team for a real estate mobile platform.</li>
-                <li>Defined business rules, roadmap, and deliverables.</li>
+                <li>Led backend team for a real estate mobile platform, applying Scrum methodology to structure sprints.</li>
+                <li>Defined business rules, requirements, roadmap, and deliverables.</li>
                 <li>Oversaw code reviews and ensured quality and timelines.</li>
                 <li>Maintained direct communication with stakeholders.</li>
                 <li>Reference: <a href="https://www.gethandshake.com/">https://www.gethandshake.com/</a></li>
             </ul>
 
-            <h2><span class="year">2024</span> Backend Coaching | ALDI Nord (Germany)</h2>
+            <h2><span class="year">2024</span> Backend Coaching | Loyalty Mobile App for Aldi Nord Supermarket (Germany)</h2>
             <ul>
                 <li>Onboarded ALDI Poland’s backend team post-transition.</li>
                 <li>Enabled team ownership over technical and delivery responsibilities.</li>
-                <li>Facilitated smooth handover of domain and architecture knowledge.</li>
+                <li>Facilitated smooth handover of business domain and software architecture knowledge.</li>
                 <li>Reference: <a href="https://www.aldi.be/nl/informatie/aldiapp.html#app">ALDI Nord Loyalty Program in
                         dutch</a></li>
             </ul>
 
-            <h2><span class="year">2022</span> Project Lead | University App (Mexico)</h2>
+            <h2><span class="year">2022</span> Project Lead | Health Monitoring Mobile App for Monterrey University (Mexico)</h2>
             <ul>
                 <li>Led cross-functional team of 9 (UX/UI, FE, BE, analyst, DevOps) based in Argentina.</li>
-                <li>Defined roadmap and translated goals into tasks.</li>
+                <li>Defined roadmap, prioritize tasks, and translated client requirements into actionable Jira tasks.</li>
                 <li>Led Scrum ceremonies and ensured sprint objectives.</li>
                 <li>Worked directly with the client and CEO.</li>
                 <li>Reference: <a
@@ -218,7 +218,7 @@
                         Post nº 2</a></li>
             </ul>
 
-            <h2><span class="year">2020</span> Engineering Mentor | Fintech Startup (Argentina)</h2>
+            <h2><span class="year">2020</span> Engineering Mentor | Mobile App for Fintech Startup (Argentina)</h2>
             <ul>
                 <li>Guided junior dev onboarding at TAP fintech startup.</li>
                 <li>Implemented pair programming and business model clarification.</li>
