--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
         <h3>🧠 Professional Summary</h3>
         <p>I am a software engineer with a degree from an Argentine university and over 10 years of international experience developing web platforms, mobile applications, and leading teams in agile, distributed, and multicultural environments. Specialized in backend development (Node.js, TypeScript), clean architecture, and microservices.</p>    
         <p>I have collaborated with companies across Europe, Latin America, and the United States, combining strong technical expertise with leadership skills. I’ve led cross-functional teams, managing priorities, architecture, and people. I also mentored junior developers supporting their integration and professional growth within the company.</p>
-        <p>In academia, I taught and mentored over 500 students at one of Argentina’s top universities. I also represented more than 3,000 students, voicing their concerns to university authorities and advocating for changes that helped more students graduate. These experiences greatly strengthened my leadership and communication skills from an early stage.</p>        
+        <p>I was a professor at one of Argentina’s top universities, teaching over 500 students and gaining valuable experience in education.</p> 
+        <p>I served as president of the student council, representing more than 3,000 students by voicing their concerns to university authorities and advocating for changes that helped increase graduation rates. These leadership experiences greatly strengthened my communication and leadership skills from an early stage.</p>
     </section>
 
 
