--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <h2><span class="year">2024</span> Backend Coaching | Loyalty Mobile App for Aldi Nord Supermarket (Germany)</h2>
             <ul>
                 <li>Onboarded ALDI Poland’s backend team post-transition.</li>
-                <li>Enabled team ownership over technical and delivery responsibilities.</li>
+                <li>Enabled team ownership over the project through knowledge sharing, pair programming and supporting decision-making.</li>
                 <li>Facilitated smooth handover of business domain and software architecture knowledge.</li>
                 <li>Reference: <a href="https://www.aldi.be/nl/informatie/aldiapp.html#app">ALDI Nord Loyalty Program in
                         dutch</a></li>
