--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
 
             <h2><span class="year">2020</span> Engineering Mentor | Mobile App for Fintech Startup (Argentina)</h2>
             <ul>
-                <li>Guided junior dev onboarding at TAP fintech startup.</li>
+                <li>Onboarded developers.</li>
                 <li>Implemented pair programming and business model clarification.</li>
-                <li>Promoted team culture and internal cohesion.</li>
+                <li>Fostered team culture and internal cohesion.</li>
                 <li>Reference: Today they became <a href="https://tapi.la/">TAPI</a></li>
             </ul>
 
