--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </h2>
             <ul>
                 <li>Taught "Introduction to Programming" to over 200 students.</li>
-                <li>Used inclusive practices and custom-designed evaluations.</li>
+                <li>Used inclusive methodology, resulting in over 90% of students passing.</li>
                 <li>Reference: <a href="http://inpr.web.unq.edu.ar/">http://inpr.web.unq.edu.ar/</a></li>
             </ul>
 
