--- a/index.html
+++ b/index.html
@@ -254,33 +254,31 @@
         <h3>🚀 Key Projects</h3>
         <div class="experience">
 
-            <h2><span class="year">2024</span> Backend Technical Lead | Handshake App (U.S.A.)</h2>
+            <h2><span class="year">2024</span> Backend Technical Lead | Real State Mobile App | FlyDevs Argentina (Contractor) | GetHandshake U.S.A. (Client) </h2>
             <ul>
                 <li>Led backend development for a <strong>real estate referral platform</strong> connecting real estate
-                    agents across the U.S.A.</li>
+                    agents across the U.S.A., managing a team of 3 devs.</li>
                 <li><strong>Key Technologies</strong>: PostgreSQL, AWS Lambda, REST APIs, Clean Architecture,
-                    TypeScript,
-                    Google APIs, CI/CD pipelines</li>
-                <li>Reference: <a href="https://www.gethandshake.io/" target="_blank">https://www.gethandshake.io/</a>
-                </li>
+                    TypeScript, Google APIs, CI/CD pipelines</li>
+                <li>Reference: <a href="https://www.gethandshake.io/" target="_blank">https://www.gethandshake.io/</a></li>
             </ul>
 
-            <h2><span class="year">2024</span> Senior Backend Developer | ALDI Nord (Germany) via Open Reply</h2>
+            <h2><span class="year">2024</span> Senior Backend Developer | Loyalty Mobile App | Open Reply Germany (Contractor) | ALDI Nord Germany (Client) </h2>
             <ul>
                 <li>Contributed to the development of a multilingual mobile app for ALDI Nord with over 1 million active
                     users.</li>
-                <li>Collaborated with Product Owner to define business logic and API contracts using OpenAPI.</li>
+                <li>Constant Collaboration with Product Owner and UX/UI team to define business logic and API contracts using OpenAPI.</li>
                 <li>Implemented gateway backend APIs to external systems.</li>
                 <li><strong>Key Technologies</strong>: TypeScript, NestJS, Azure Functions, REST APIs, OpenAPI, Figma,
                     POEditor
                 </li>
             </ul>
 
-            <h2><span class="year">2023</span> Senior Backend Developer | OBI Retail Chain via Open Reply</h2>
+            <h2><span class="year">2023</span> Senior Backend Developer | OBI Retail Chain Germany (Client) | Open Reply Germany (Contractor) </h2>
             <ul>
                 <li>Developed microservices with NestJS and deployed them on AWS ECS.</li>
                 <li>Participated in feature planning and provided feedback to Product Owner.</li>
-                <li><strong>Key Technologies</strong>: NestJS, Node.js, AWS ECS, CI/CD, TDD, GitLab Pipelines, REST APIs
+                <li><strong>Key Technologies</strong>: NestJS, Typescript, AWS ECS, CI/CD, TDD, GitLab Pipelines, REST APIs
                 </li>
             </ul>
 
