--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
             <ul>
                 <li>Contributed to the development of a multilingual mobile app for ALDI Nord with over 1 million active
                     users.</li>
-                <li>Constant Collaboration with Product Owner and UX/UI team to define business logic and API contracts using OpenAPI.</li>
+                <li>Collaborated closely with Product Owner, frontend team, and UX/UI designers to define business logic.</li>
+                <li>Frontend team approved API contracts before backend implementation began.</li>
                 <li>Implemented gateway backend APIs to external systems.</li>
                 <li><strong>Key Technologies</strong>: TypeScript, NestJS, Azure Functions, REST APIs, OpenAPI, Figma,
                     POEditor
