--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@
     <section data-aos="fade-up">
         <h3>🧠 Professional Summary</h3>
         <p>I am a software engineer with a degree from an Argentine university and over 10 years of international experience developing web platforms, mobile applications, and leading teams in agile, distributed, and multicultural environments. Specialized in backend development (Node.js, TypeScript), clean architecture, and microservices.</p>    
-        <p>I have collaborated with companies across Europe, Latin America, and the United States, combining strong technical expertise with leadership skills. I’ve led cross-functional teams, managing priorities, architecture, and people. I also mentored junior developers supporting their integration and professional growth within the company.</p>
+        <p>I have collaborated with companies across Europe, Latin America, and the United States, combining strong technical expertise with leadership skills. I’ve led cross-functional teams, managing priorities, architecture, and people. I also mentored developers supporting their integration and professional growth within the company.</p>
         <p>I was a professor at one of Argentina’s top universities, teaching over 500 students and gaining valuable experience in education.</p> 
-        <p>I served as president of the student council, representing more than 3,000 students by voicing their concerns to university authorities and advocating for changes that helped increase graduation rates. These leadership experiences greatly strengthened my communication and leadership skills from an early stage.</p>
+        <p>I served as president of the student council, representing more than 3,000 students by voicing their concerns to university authorities and advocating for changes that helped increase graduation rates. These leadership experiences strengthened my communication and leadership skills from an early stage.</p>
     </section>
 
 
     <section data-aos="fade-up">
         <h3>🎯 Professional Vision</h3>
-        <p>I thrive in startup environments because of their energy, rapid execution, and the opportunity to contribute across multiple dimensions. I enjoy being part of small, focused teams where I can help with project and roadmap planning, coding, interviewing developers, defining requirements — and continuously validating the product with the market to ensure we’re solving real problems, sharing project updates, prioritizing tasks, and more.</p>
+        <p>I thrive in fast-paced environments where software quality, and delivering real value to users go hand in hand. I’m passionate about writing clean, maintainable, and production-ready code — not just getting things done, but getting them done right.</p>
         <p>I value direct communication with the CTO and environments where speed, ownership, and purpose go hand in hand.</p>
         <p>Looking ahead, my goal is to continue growing into roles where I can lead high-performing teams focused on delivering outstanding products that balance technical excellence and user-centered design. I prioritize building collaborative cultures where everyone understands the product’s purpose, feels ownership, and works with autonomy.</p>    
         <p>I don’t enjoy working with zombies 🧟 — I love working with professionals who think critically and perform with purpose, quality, and heart 🤩.</p>
@@ -258,8 +258,9 @@
             <ul>
                 <li>Led backend development for a <strong>real estate referral platform</strong> connecting real estate
                     agents across the U.S.A., managing a team of 3 devs.</li>
+                <li>The app enabled searching for a group of agents within a specific radius around a selected city using geolocation, helping connect nearby professionals.</li>
                 <li><strong>Key Technologies</strong>: PostgreSQL, AWS Lambda, REST APIs, Clean Architecture,
-                    TypeScript, Google APIs, CI/CD pipelines</li>
+                    TypeScript, Google Maps APIs, CI/CD pipelines</li>
                 <li>Reference: <a href="https://www.gethandshake.io/" target="_blank">https://www.gethandshake.io/</a></li>
             </ul>
 
@@ -273,6 +274,7 @@
                 <li><strong>Key Technologies</strong>: TypeScript, NestJS, Azure Functions, REST APIs, OpenAPI, Figma,
                     POEditor
                 </li>
+                <li>Reference: <a href="https://www.aldi.be/nl/informatie/aldiapp.html#app">ALDI Nord Loyalty Program in dutch</a></li>
             </ul>
 
             <h2><span class="year">2023</span> Senior Backend Developer | OBI Retail Chain Germany (Client) | Open Reply Germany (Contractor) </h2>
@@ -283,20 +285,18 @@
                 </li>
             </ul>
 
-            <h2><span class="year">2022</span> Team Lead & Backend Tech Lead | Neocomplexx</h2>
+            <h2><span class="year">2022</span> Backend Tech Lead | Health Monitoring Mobile App | Monterrey University Mexico (Client) | Neocomplexx Argentina (Contractor) </h2>
             <ul>
-                <li><strong>Project</strong>: Student well-being app for the University of Monterrey, Mexico</li>
+                <li><strong>Developed Student well-being app for the University of Monterrey, Mexico</li>
                 <li>Led a team of 9 (UX/UI, FE, BE, analyst, DevOps), defined roadmap, coordinated with client and CEO,
                     and facilitated Scrum ceremonies.
                 </li>
-                <li>Oversaw full delivery cycle: requirements → design in Figma → implementation → testing → demos.</li>
+                <li>Oversaw full delivery cycle: defined requirement → design in Figma → implementation → testing → demos.</li>
                 <li><strong>Key Technologies</strong>: Node.js with Express, Clean Architecture, MongoDB, AWS Lambda,
-                    React
-                    18,
-                    Figma, Gitflow, GitLab CI/CD, TDD, API REST, OpenAPI, OAuth2</li>
+                    React 18, Figma, Gitflow, GitLab CI/CD, TDD, API REST, OpenAPI, OAuth2</li>
             </ul>
 
-            <h2><span class="year">2021</span> Backend Developer | Finleap Connect Fintech (Milan & Berlin)</h2>
+            <h2><span class="year">2021</span> Backend Developer | API Rest Service | Finleap Connect Fintech Berlin (Contractor) </h2>
             <ul>
                 <li>Developed PSD2-compliant Open Banking APIs including Berlin Group XS2A Interface.</li>
                 <li>Integrated new banks across Europe in a multicultural agile team.</li>
@@ -307,28 +307,35 @@
                         target="_blank">Berlin Group XS2A PDF</a></li>
             </ul>
 
-            <h2><span class="year">2021</span> Backend Developer | TAP Fintech Startup</h2>
+            <h2><span class="year">2021</span> Backend Developer | Digital Wallet Mobile App | TAP Fintech Startup Argentina (Contractor) </h2>
             <ul>
                 <li>Refactored microservices following clean architecture for scalability.</li>
                 <li>Mentored junior developers and managed onboarding.</li>
                 <li>Implemented fraud-prevention features.</li>
                 <li><strong>Key Technologies</strong>: Node.js, MongoDB, Clean Architecture, REST APIs, Git, Docker</li>
+                <li>Reference: <a
+                        href="https://auntap.com/pagos-con-qr/"
+                        target="_blank">TAP Wallter</a></li>
             </ul>
 
-            <h2><span class="year">2019</span> Blockchain Backend Developer | AtixLabs / New Balance RealChain</h2>
+            <h2><span class="year">2019</span> Blockchain Backend Developer | Product Authentication Mobile App (NFT) | New Balance RealChain (Client) | AtixLabs Argentina (Contractor) </h2>
             <ul>
-                <li>Developed backend for an NFT-based app verifying New Balance shoe authenticity.</li>
+                <li>Developed backend for an NFT-based mobile app verifying New Balance shoe authenticity.</li>
                 <li>Used Tangem cards and Cardano blockchain derived from shoe serial numbers.</li>
                 <li>Reference: <a href="https://builtoncardano.com/nb-realchain" target="_blank">NB RealChain on
                         BuiltOnCardano</a></li>
-                <li><strong>Key Technologies</strong>: Node.js, Cardano, BIP39, Tangem SDK, MongoDB, Docker</li>
+                <li><strong>Key Technologies</strong>: Node.js, Cardano, BIP39, Tangem SDK, MongoDB, Yoroi Light Wallet</li>
             </ul>
 
             <h2><span class="year">2014–2016</span> Full-stack Developer | CeSPI UNLP (Argentina)</h2>
             <ul>
                 <li>Developed academic platforms from scratch for internal university use.</li>
-                <li>Built search engines, back offices, and academic management systems.</li>
-                <li><strong>Key Technologies</strong>: Ruby on Rails, HTML5, CSS3, Elasticsearch, Redis, PostgreSQL</li>
+                <li>Built search engines, back offices, crawlers, and academic management systems.</li>
+                <li><strong>Key Technologies</strong>: Ruby on Rails, HTML5, CSS3, Elasticsearch, Redis, PostgreSQL, Sidekiq </li>
+                <li>Reference: <a
+                        href="https://dihuen.unlp.edu.ar/"
+                        target="_blank">Dihuen Search Engine</a></li>
+                
             </ul>
 
         </div>
