--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
 
     <section data-aos="fade-up">
         <h3>🎯 Professional Vision</h3>
-        <p>I thrive in fast-paced environments where software quality, and delivering real value to users go hand in hand. I’m passionate about writing clean, maintainable, and production-ready code — not just getting things done, but getting them done right.</p>
-        <p>I value direct communication with the CTO and environments where speed, ownership, and purpose go hand in hand.</p>
+        <p>I’m passionate about creating engineering cultures where speed, ownership, and purpose go hand in hand. I believe in leading by example: writing clean, production-grade code, promoting good architectural practices, and continuously improving systems based on real-world usage and feedback.</p>
         <p>Looking ahead, my goal is to continue growing into roles where I can lead high-performing teams focused on delivering outstanding products that balance technical excellence and user-centered design. I prioritize building collaborative cultures where everyone understands the product’s purpose, feels ownership, and works with autonomy.</p>    
         <p>I don’t enjoy working with zombies 🧟 — I love working with professionals who think critically and perform with purpose, quality, and heart 🤩.</p>
     </section>
