--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 </li>
             </ul>
 
-            <h2><span class="year">2022</span> Backend Tech Lead | Health Monitoring Mobile App | Monterrey University Mexico (Client) | Neocomplexx Argentina (Contractor) </h2>
+            <h2><span class="year">2022</span> Project Lead & Backend Tech Lead | Health Monitoring Mobile App | Monterrey University Mexico (Client) | Neocomplexx Argentina (Contractor) </h2>
             <ul>
                 <li><strong>Developed Student well-being app for the University of Monterrey, Mexico</li>
                 <li>Led a team of 9 (UX/UI, FE, BE, analyst, DevOps), defined roadmap, coordinated with client and CEO,
@@ -306,7 +306,7 @@
                         target="_blank">Berlin Group XS2A PDF</a></li>
             </ul>
 
-            <h2><span class="year">2021</span> Backend Developer | Digital Wallet Mobile App | TAP Fintech Startup Argentina (Contractor) </h2>
+            <h2><span class="year">2020</span> Backend Developer | Digital Wallet Mobile App | TAP Fintech Startup Argentina (Contractor) </h2>
             <ul>
                 <li>Refactored microservices following clean architecture for scalability.</li>
                 <li>Mentored junior developers and managed onboarding.</li>
